--- a/nBodyProblemOpenMp.vcxproj
+++ b/nBodyProblemOpenMp.vcxproj
@@ -118,6 +118,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -128,6 +129,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="nBodyProblemOpenMp.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Body.h" />
+    <ClInclude Include="Constants.h" />
+    <ClInclude Include="gif.h" />
+    <ClInclude Include="NbodyDrawer.h" />
+    <ClInclude Include="Simulation.h" />
+    <ClInclude Include="Updaters.h" />
+    <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
