--- a/nBodyProblemOpenMp.vcxproj
+++ b/nBodyProblemOpenMp.vcxproj
@@ -132,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Body.h" />
+    <ClInclude Include="cmdparser.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="gif.h" />
     <ClInclude Include="NbodyDrawer.h" />
